# final_project

./: .gitignore  README.md  requirements-notebook.txt  requirements-task1.txt
.jupyter/: migrated
config/: stella_pinhole_template.yaml
docs/: nav2_stella_tutorial.md  task2_stella.md
notebooks/: project2_task1.ipynb
ros2_ws/src/vslam_nav2_integration/: CMakeLists.txt  package.xml
ros2_ws/src/vslam_nav2_integration/config/: nav2_costmap_overlay.yaml
ros2_ws/src/vslam_nav2_integration/launch/: image_from_video.launch.py  stella_slam_only.launch.py  stella_with_video.launch.py
scripts/: check_task1.sh
task1_kitti/: __init__.py  kitti_loader.py  metrics.py  plotting.py  run_kitti.py  synthetic.py  vslam.py
