<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vslam_nav2_integration</name>
  <version>0.1.0</version>
  <description>Launch files and parameters for integrating StellaVSLAM with Nav2 (course tutorial).</description>
  <maintainer email="student@example.edu">Student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_publisher</exec_depend>
  <exec_depend>stella_vslam_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
